--- a/style.css
+++ b/style.css
@@ -88,6 +88,12 @@ a{
     padding: 200px 50px ;
     /* gap: 60px; */
 }
+/* #home{
+       background: linear-gradient(rgba(0, 0, 0, 0.568), rgba(0, 0, 0, 0.584)), url('./images/IMG-20220628-WA0015.jpg');
+       background-repeat: no-repeat;
+       background-position: center;
+       background-size: cover;
+} */
 .home1{
     width: 60%;
     /* text-align: center; */
@@ -95,7 +101,8 @@ a{
 }
 /* .home2  */
 img{
-    height: 700px;
+    align-items: center;
+    height: 600px;
     /* margin-right: -300px; */
 }
 footer{
@@ -122,7 +129,10 @@ button{
     border: none;
     background-color: transparent;
 }
-#more {display: none;}
+#more {
+    display: none;
+    color: var(--clr-black);
+}
 /* ABOUT */
 .about{
     /* display: flex; */
@@ -213,4 +223,145 @@ padding: 150px;
     font-size: 1.5rem;
     transition: var(--transition);
     color: #45b249;
+}
+
+#contacts {
+    color: var(--clr-white);
+}
+#contacts h2 {
+    /* padding-top: 1rem; */
+}
+.underline {
+    width: 10rem;
+    height: 0.25rem;
+    background-color: var(--clr-green);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (min-width: 992px) {
+    .contact-details {
+        display: grid;
+        place-items: center;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem;
+    }
+    .contact-details:last-child {
+        grid-column: span 2;
+    }
+    .vl {
+        border-left: 1px solid var(--clr-green);
+        height: 300px;
+        position: absolute;
+        margin-left: -3px;
+    }
+}
+.contact-list h4 {
+    font-size: 1.2rem;
+}label {
+    display: block;
+    font-family: var(--ff-primary);
+    text-transform: capitalize;
+    font-size: 1.5rem;
+}
+
+.input {
+    background-color: transparent;
+    margin-bottom: 1rem;
+    height: 2rem;
+    width: 15rem;
+    font-weight: bold;
+    border-radius: 0.3rem;
+    /* border: 1px solid var(--clr-green); */
+}
+
+.input:focus {
+    outline: none;
+    border: 2px solid var(--clr-green);
+}
+
+.text-area {
+    height: 10rem;
+    width: 25rem;
+    border: 4px solid var(--clr-green);
+    font-family: var(--ff-primary);
+    font-weight: 400;
+    font-size: 20px;
+    border-radius: 0.5rem;
+}
+
+.text-area:focus {
+    outline: none;
+}
+
+.submit-btn {
+    width: 10rem;
+    padding: 0.5rem 1rem;
+    font-family: var(--ff-primary);
+    font-size: 0.8rem;
+    font-weight: bold;
+    background-color: transparent;
+    letter-spacing: 0.1rem;
+    color: var(--clr-white);
+    border: 2px solid var(--clr-green);
+    border-radius: 0.3rem;
+    transition: var(--transition);
+    cursor: pointer;
+}
+
+.submit-btn:hover {
+    font-size: 0.9rem;
+    background-color: var(--clr-green);
+    border: transparent;
+    color: rgb(13, 13, 69);
+}
+
+.feedback {
+    padding: 0.375rem 0.75rem;
+    margin-bottom: 1rem;
+    border-color: transparent;
+    border-radius: 0.25rem;
+}
+
+.feedback-success {
+    color: rgb(9, 50, 9);
+    background-color: var(--clr-green);
+}
+
+.feedback-failed {
+    color: rgb(59, 12, 12);
+    background-color: rgb(239, 38, 38);
+}
+
+.text-success {
+    color: rgb(9, 50, 9);
+}
+
+.text-failed {
+    color: rgb(59, 12, 12);
+}
+
+.epic-email a {
+    color: var(--clr-green);
+}
+
+span {
+    color: var(--clr-green);
+}
+
+.contact-list {
+    margin-top: 1rem;
+}
+
+#contacts .msg {
+    /* text-align: center; */
+    margin-bottom: 3rem;
+    color: var(--clr-white);
+    font-size: 2rem;
+}
+
+.contact-details {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    margin-left: 3rem;
 }
