--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ body{
 }
 #home{
      /* height: 1050px; */
-     background: linear-gradient(rgba(0, 0, 0, 0.565), rgba(0, 0, 0, 0.584)), url('./images/line background.png');
-     /* background-repeat: no-repeat; */
+     background: linear-gradient(rgba(0, 0, 0, 0.565), rgba(0, 0, 0, 0.584)), url('./images/imigongo.png');
+     background-repeat: repeat;
      background-position: center;
      background-size: cover;
      background-size: 8rem;
@@ -58,7 +58,7 @@ nav {
     display: block;
 }
 .logo {
-    height: 70px;
+    height: 50px;
     /* box-shadow: var(--dark-shadow); */
     background-color: transparent;
 }
@@ -172,7 +172,7 @@ nav {
     }
 }
 /* end new nav */
-
+    
 
 
 .homee{
