--- a/blog.css
+++ b/blog.css
@@ -39,7 +39,7 @@ body{
 }
 #home{
      /* height: 1050px; */
-     background: linear-gradient(rgba(0, 0, 0, 0.565), rgba(0, 0, 0, 0.584)), url('./images/line background.png');
+     /* background: linear-gradient(rgba(0, 0, 0, 0.565), rgba(0, 0, 0, 0.584)), url('./images/line background.png'); */
      /* background-repeat: no-repeat; */
      background-position: center;
      background-size: cover;
