--- a/blog.css
+++ b/blog.css
@@ -205,6 +205,7 @@ footer{
 footer p{
     align-items: center;
     text-align: center;
+    font-size: 1.5rem;
     color: white;
     /* align-items: baseline; */
     margin: auto 0;
