--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
 }
 #home{
      /* height: 1050px; */
-     background: linear-gradient(rgba(0, 0, 0, 0.565), rgba(0, 0, 0, 0.584)), url('./images/line background.png');
+     /* background: linear-gradient(rgba(0, 0, 0, 0.565), rgba(0, 0, 0, 0.584)), url('./images'); */
      /* background-repeat: no-repeat; */
      background-position: center;
      background-size: cover;
@@ -206,6 +206,7 @@ footer p{
     align-items: center;
     text-align: center;
     color: white;
+    font-size: 1.5rem;
     /* align-items: baseline; */
     margin: auto 0;
     margin-top: auto;
